# dotfiles-installer

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
cmake/: CMakeDemo-config.cmake  FindCMakeDemo.cmake
include/: CMakeLists.txt  checklist.hpp  setup.hpp
src/: CMakeLists.txt  checklist.cpp  main.cpp  setup.cpp
tests/: CMakeLists.txt
